--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"react-dom": "^17.0.2"
 	},
 	"scripts": {
-		"start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
-		"build": "webpack --config webpack/webpack.config.js --env env=prod"
+		"start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+		"build": "webpack --config webpack/webpack.config.js --env env=prod",
+		"lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\""
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -32,8 +33,15 @@
 		"@babel/preset-typescript": "^7.13.0",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.3",
+		"@typescript-eslint/eslint-plugin": "^4.22.0",
+		"@typescript-eslint/parser": "^4.22.0",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.2.1",
+		"eslint": "^7.24.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"html-webpack-plugin": "^5.3.1",
 		"style-loader": "^2.0.0",
 		"typescript": "^4.2.4",
