--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^8.10.1",
+    "@fluentui/react-hooks": "^8.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
